--- a/app.json
+++ b/app.json
@@ -9,14 +9,53 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.agentcrm.app",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "AgentCRM needs access to your location to show clients and meetings on the map.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "AgentCRM needs access to your location to show clients and meetings on the map.",
+        "NSCameraUsageDescription": "AgentCRM needs access to your camera to scan QR codes and take photos.",
+        "NSPhotoLibraryUsageDescription": "AgentCRM needs access to your photo library to select images."
+      }
+    },
+    "android": {
+      "package": "com.agentcrm.app",
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ],
+      "config": {
+        "googleMaps": {
+          "apiKey": "YOUR_GOOGLE_MAPS_API_KEY"
+        }
+      }
     },
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow AgentCRM to use your location for meetings and client management."
+        }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#0284c7"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
