--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
+    "dayjs": "^1.11.19",
     "expo": "^54.0.10",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
@@ -42,7 +43,6 @@
     "react-dom": "19.1.0",
     "react-i18next": "^16.2.3",
     "react-native": "0.81.4",
-    "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.26.18",
     "react-native-qrcode-svg": "^6.3.20",
@@ -50,6 +50,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
